# ClawMaster

./: .gitignore  ACTUAL_SCENARIO_TEST_REPORT.md  AEROSPACE_AUDIT_COMPLETE.md  AEROSPACE_AUDIT_FINAL_REPORT.md  AEROSPACE_AUDIT_SUMMARY.md  AEROSPACE_GRADE_AUDIT_2026.md  AEROSPACE_GRADE_COMPLETION_REPORT.md  AEROSPACE_GRADE_TEST_COMPLETE.md  AGENTIC_LOOP_INTEGRATION_2026-03-13.md  AGENTIC_LOOP_INTEGRATION_COMPLETE_2026-03-13.md  AGGRESSIVE_FIX_APPLIED.md  AI_CHAT_TEST_EXECUTION.md  AI_CHAT_TEST_REPORT.md  AI_CHAT_TEST_SCENARIOS.md  ALL_FEATURES_READY.md  ALL_TOOLS_COMPLETE_TEST_PLAN.md  ALL_TOOLS_SKILLS_TEST_FINAL_REPORT.md  ALL_TOOLS_TEST.md  ARCHITECTURE_DUAL_UI.md  AUDIT_COMPLETE.txt  AUDIT_FINAL_SUMMARY.md  AUDIT_SUMMARY.md  AUTOMATED_CLI_TEST_ANALYSIS.md  AUTOMATED_CODE_ANALYSIS.md  AUTOMATED_TEST_ANALYSIS_REPORT.md  AUTOMATED_TEST_SUMMARY.md  AUTO_AUDIT_TEST_REPORT.md  AUTO_TEST_ANALYSIS_FINAL.md  AUTO_TEST_FINAL_REPORT.md  AUTO_TEST_GUIDE.md  AUTO_TEST_REPORT.md  AUTO_TOOL_TEST_REPORT.md  BREAKTHROUGH_FOUND.md  BROWSER_TOOL_COMPLETION_REPORT.md  BUNDLED_SKILLS_AI_CONVERSATION_TEST_REPORT.md  BUNDLED_SKILLS_CLI_VISUAL_TEST_REPORT.md  BUNDLED_SKILLS_COMPLEX_CONVERSATION_REPORT.md  BUNDLED_SKILLS_DO178C_REPORT.md  BUNDLED_SKILLS_FINAL_REPORT.md  BUNDLED_SKILLS_IMPLEMENTATION_SUMMARY.md  (+467 more)
apps/clawhub-server/: Cargo.toml  README.md
apps/clawhub-server/src/: main.rs
apps/cosmic/: CODE_AUDIT_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT.md  COSMIC_UI_STATUS_REPORT.md  CURRENT_STATUS_AND_TODO.md  Cargo.toml  DO178C_COMPLIANCE.md  DO178C_COMPLIANCE_REPORT.md  DROPDOWN_MENU_IMPLEMENTATION.md  FEATURE_IMPLEMENTATION_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_DELIVERY_REPORT.md  FINAL_ENHANCEMENT_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FUNCTION_AUDIT_REPORT.md  IMPLEMENTATION_COMPLETE.md  MENU_SYSTEM_REPORT.md  OPTIMIZATION_SUMMARY.md  POPOVER_MENU_IMPLEMENTATION.md  UI_OPTIMIZATION_REPORT.md  WEBUI_FEATURE_COMPARISON.md
apps/cosmic/src/: app_new.rs  confirmation_dialog.rs  error_handling.rs  keyboard_shortcuts.rs  lib.rs  loading_state.rs  main.rs  ui_constants.rs
apps/cosmic/tests/: integration_test.rs  pages_test.rs  ui_integration_test.rs
crates/agent-loop/: Cargo.toml  README.md
crates/agent-loop/examples/: basic_agent_loop.rs
crates/agent-loop/src/: config.rs  error.rs  executor.rs  lib.rs  loop_engine.rs  tool_registry.rs
crates/agent-loop/tests/: integration_tests.rs
crates/agentic-loop/: Cargo.toml  README.md
crates/agentic-loop/src/: context.rs  executor.rs  lib.rs  registry.rs
crates/agents/: AGENTIC_LOOP_INTEGRATION.md  Cargo.toml
crates/agents-memory/: Cargo.toml  README.md
crates/agents-memory/src/: lib.rs
crates/agents/examples/: agentic_loop_demo.rs
crates/agents/src/: agentic_loop.rs  auth_profiles.rs  lib.rs  model.rs  prompt.rs  prompt.rs.orig  prompt.rs.rej  provider_chain.rs  runner.rs  skills.rs  tool_parsing.rs
crates/audit-log/: Cargo.toml  README.md
crates/audit-log/src/: events.rs  lib.rs  logger.rs  signature.rs  storage.rs
crates/auto-reply/: Cargo.toml
crates/auto-reply/src/: directives.rs  reply.rs
crates/backup-recovery/: Cargo.toml
crates/backup-recovery/src/: backup.rs  lib.rs  recovery.rs  retention.rs  scheduler.rs  verification.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: boot.rs
crates/browser/: Cargo.toml
crates/browser/src/: container.rs  lib.rs  manager.rs  pool.rs  types.rs
crates/bundled-skills/: Cargo.toml  README.md
crates/bundled-skills/src/: china.rs  china_express_aviation.rs  china_extended.rs  china_health_social.rs  china_transport_tax.rs  enterprise_auto_tax.rs  lib.rs
crates/bundled-skills/tests/: ai_conversation_test.rs  all_skills_deep_test.rs  china_test.rs  cli_visual_test.rs  complex_conversation_test.rs  comprehensive_integration_tests.rs  comprehensive_test.rs  do178c_scenario_tests.rs  do178c_test.rs  integration_test.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: error.rs  server.rs
crates/channels/: Cargo.toml
crates/channels/src/: plugin.rs  registry.rs
crates/chat/: Cargo.toml
crates/chat-catchup/: Cargo.toml  README.md
crates/chat-catchup/examples/: chat_catchup_demo.rs
crates/chat-catchup/src/: catchup_engine.rs  config.rs  context_builder.rs  error.rs  lib.rs  message_processor.rs
crates/chat-catchup/tests/: basic_tests.rs  integration_tests.rs
crates/chat/src/: lib.rs  runtime.rs
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: main.rs
crates/claw-cli/tests/: cli_integration.rs
crates/clawhub/: Cargo.toml  README.md
crates/clawhub/examples/: basic_usage.rs
crates/clawhub/migrations/: 20260311000001_create_tools.sql  20260311000002_create_skills_table.sql
crates/clawhub/src/: api.rs  error.rs  lib.rs  metadata.rs  registry.rs  security.rs  skills.rs  storage.rs  types.rs
crates/clawhub/tests/: api_integration.rs  api_skills_integration.rs  registry_integration.rs  skills_boundary_conditions.rs  skills_critical_path.rs
crates/clawmaster-dev/: Cargo.toml
crates/clawmaster-dev/src/: main.rs  utils.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent_client.rs  auth_commands.rs  browser_commands.rs  channel_commands.rs  config_commands.rs  db_commands.rs  doctor_commands.rs  hooks_commands.rs  import_commands.rs  main.rs  memory_commands.rs  node_commands.rs  sandbox_commands.rs  service_commands.rs  tailscale_commands.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs
crates/config/: Cargo.toml
crates/config-validator/: Cargo.toml  README.md
crates/config-validator/src/: lib.rs  rules.rs  validator.rs
crates/config/src/: agent_defs.rs  lib.rs  loader.rs  migrate.rs  schema.rs  template.rs  validate.rs
crates/config/tests/: public_bind_security_test.rs
crates/cosmic-client/: Cargo.toml
crates/cron/: Cargo.toml
crates/data-parser/: Cargo.toml  README.md
crates/dingtalk/: Cargo.toml  README.md
crates/discord/: Cargo.toml
crates/fault-recovery/: Cargo.toml
crates/feishu/: Cargo.toml  README.md
docs/: book.toml  (+4 more)
(+992 files in other folders)
