[package]
name = "clawhub-server"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "clawhub-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Config
dotenvy = { workspace = true }

# Workspace crates
clawmaster-clawhub = { workspace = true }
clawmaster-config = { workspace = true }

[lints]
workspace = true
