[package]
name = "clawmaster-cosmic"
version = "0.1.0"
edition = "2021"
description = "ClawMaster native desktop UI using libcosmic"
authors = ["ClawMaster Team"]

[lib]
name = "clawmaster_cosmic"
path = "src/lib.rs"

[[bin]]
name = "clawmaster-cosmic"
path = "src/main.rs"

[dependencies]
# libcosmic dependencies - using same commit as OpenClaw+ (384e8f6e)
# This version uses smithay-client-toolkit 0.19.2 which works on macOS
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", rev = "384e8f6e219bb458720eafa5bb971b832c057f23", features = ["tokio", "winit_wgpu"] }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic.git", rev = "384e8f6e219bb458720eafa5bb971b832c057f23" }

# Internal dependencies
clawmaster-cosmic-client = { path = "../../crates/cosmic-client" }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
futures = { workspace = true }

# Additional dependencies
dirs = "5.0"
toml = "0.8"
url = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[features]
default = ["debug"]
debug = []
