[package]
name = "clawmaster-agents-memory"
version = "0.10.18"
edition = "2021"
authors = ["ClawMaster Team"]
description = "AGENTS.md long-term memory system for ClawMaster"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

clawmaster-config = { path = "../config" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
