[package]
edition.workspace = true
name              = "clawmaster-agents"
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:clawmaster-metrics"]

[dependencies]
anyhow          = { workspace = true }
async-stream    = { workspace = true }
async-trait     = { workspace = true }
futures         = { workspace = true }
clawmaster-common   = { workspace = true }
clawmaster-config   = { workspace = true }
clawmaster-sessions = { workspace = true }
clawmaster-skills   = { workspace = true }
clawmaster-agentic-loop = { workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-stream    = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }

# Optional
clawmaster-metrics = { optional = true, workspace = true }

[dev-dependencies]
axum     = { workspace = true }
http     = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
