[package]
name = "clawmaster-audit-log"
version = "0.10.18"
edition = "2021"
authors = ["ClawMaster Team"]
description = "Audit logging system - DO-178C Level A compliant"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

# Cryptography for log signing
sha2 = { workspace = true }
hmac = { workspace = true }
hex = "0.4"
rand = { workspace = true }

# Async utilities
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
