[package]
edition.workspace = true
name              = "clawmaster-auto-reply"
version.workspace = true

[dependencies]
clawmaster-agents   = { workspace = true }
clawmaster-common   = { workspace = true }
clawmaster-metrics  = { optional = true, workspace = true }
clawmaster-routing  = { workspace = true }
clawmaster-sessions = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }

[features]
default = []
metrics = ["dep:clawmaster-metrics"]

[lints]
workspace = true
