[package]
edition.workspace    = true
license.workspace    = true
name                 = "benchmarks"
repository.workspace = true
version.workspace    = true

[dependencies]
clawmaster-agents    = { workspace = true }
clawmaster-config    = { workspace = true }
clawmaster-providers = { workspace = true }
clawmaster-sessions  = { workspace = true }
serde_json       = { workspace = true }
tempfile         = { workspace = true }
toml             = { workspace = true }

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "4.3" }

[[bench]]
harness = false
name    = "boot"

[lints]
workspace = true
