[package]
edition.workspace = true
name              = "clawmaster-browser"
version.workspace = true

[dependencies]
async-trait    = "0.1"
base64         = { workspace = true }
chromiumoxide  = { default-features = false, features = ["tokio-runtime"], version = "0.8" }
futures        = { workspace = true }
clawmaster-common  = { workspace = true }
clawmaster-config  = { workspace = true }
clawmaster-metrics = { optional = true, workspace = true }
rand           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sysinfo        = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
url            = "2.5"
uuid           = { workspace = true }
which          = "8.0"

[features]
default = []
metrics = ["dep:clawmaster-metrics"]
tracing = []

[lints]
workspace = true
