[package]
name = "clawmaster-bundled-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

clawmaster-skills = { workspace = true }
clawmaster-config = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []

[lib]
path = "src/lib.rs"
