[package]
edition.workspace = true
name              = "clawmaster-canvas"
version.workspace = true

[dependencies]
axum           = { workspace = true }
clawmaster-common  = { workspace = true }
clawmaster-metrics = { optional = true, workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:clawmaster-metrics"]

[lints]
workspace = true
