[package]
edition.workspace = true
name              = "clawmaster-channels"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
bytes          = { workspace = true }
http           = { workspace = true }
clawmaster-common  = { workspace = true }
clawmaster-config  = { workspace = true }
clawmaster-metrics = { optional = true, workspace = true }
rand           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:clawmaster-metrics"]

[lints]
workspace = true
