[package]
name = "clawmaster-chat-catchup"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { features = ["full"], workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
uuid = { features = ["v4"], workspace = true }
chrono = { features = ["serde"], workspace = true }
parking_lot = "0.12"
dashmap = "6.1"
regex = "1.11"

clawmaster-common = { workspace = true }
clawmaster-channels = { workspace = true }
clawmaster-sessions = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
