[package]
edition.workspace    = true
name                 = "clawmaster-chat"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow                = { workspace = true }
async-trait           = { workspace = true }
base64                = { workspace = true }
chrono                = { features = ["serde"], optional = true, workspace = true }
chrono-tz             = { workspace = true }
clawmaster-agents         = { workspace = true }
clawmaster-channels       = { workspace = true }
clawmaster-common         = { workspace = true }
clawmaster-config         = { workspace = true }
clawmaster-memory         = { workspace = true }
clawmaster-metrics        = { optional = true, workspace = true }
clawmaster-plugins        = { workspace = true }
clawmaster-projects       = { workspace = true }
clawmaster-providers      = { workspace = true }
clawmaster-service-traits = { workspace = true }
clawmaster-sessions       = { workspace = true }
clawmaster-skills         = { workspace = true }
clawmaster-telegram       = { workspace = true }
clawmaster-tools          = { workspace = true }
clawmaster-voice          = { workspace = true }
futures               = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tokio-stream          = { workspace = true }
tracing               = { workspace = true }
uuid                  = { workspace = true }

[features]
local-llm          = []
metrics            = ["dep:clawmaster-metrics", "clawmaster-metrics/sqlite"]
push-notifications = ["dep:chrono"]
web-ui             = ["dep:chrono"]

[dev-dependencies]
clawmaster-channels = { workspace = true }
sqlx            = { workspace = true }
tempfile        = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }

[lints]
workspace = true
