[package]
name = "claw"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "claw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { features = ["full"], workspace = true }

# CLI
clap = { features = ["derive"], workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { features = ["json"], workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Terminal UI
colored = "2.1"

# Other dependencies
base64 = { workspace = true }
dirs-next = { workspace = true }

# Workspace crates
clawmaster-clawhub = { workspace = true }
clawmaster-config = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = { workspace = true }

[lints]
workspace = true
