[package]
name = "clawmaster-clawhub"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
axum-extra = { workspace = true }

# Database
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Crypto
ed25519-dalek = "2"
sha2 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }

# Time
time = { workspace = true, features = ["serde", "formatting", "parsing"] }

# Workspace crates
clawmaster-config = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
axum-test = "14.0"
tokio = { features = ["macros", "rt"], workspace = true }

[lints]
workspace = true
