[package]
name = "clawmaster-dev"
edition.workspace = true
version.workspace = true

[[bin]]
name = "clawmaster-dev"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
handlebars = "5.0"
walkdir = "2.0"
notify = "6.0"

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
