[package]
description       = "Personal AI gateway inspired by OpenClaw"
edition.workspace = true
homepage          = "https://www.clawmaster.org/"
license           = "MIT"
name              = "clawmaster"
repository        = "https://github.com/arkCyber/ClawMaster"
version.workspace = true

[package.metadata.deb]
assets = [
  [
    "target/release/clawmaster",
    "usr/bin/",
    "755",
  ],
  [
    "../web/src/assets/**/*",
    "usr/share/clawmaster/web/",
    "644",
  ],
  [
    "target/release/clawmaster_wasm_calc.wasm",
    "usr/share/clawmaster/wasm/",
    "644",
  ],
  [
    "target/release/clawmaster_wasm_web_fetch.wasm",
    "usr/share/clawmaster/wasm/",
    "644",
  ],
  [
    "target/release/clawmaster_wasm_web_search.wasm",
    "usr/share/clawmaster/wasm/",
    "644",
  ],
]
copyright = "2025, ClawMaster Contributors"
depends = "$auto"
maintainer = "ClawMaster Contributors"
name = "clawmaster"
priority = "optional"
section = "net"

[package.metadata.generate-rpm]
assets = [
  { dest = "/usr/bin/clawmaster", mode = "0755", source = "target/release/clawmaster" },
  { dest = "/usr/share/clawmaster/wasm/", mode = "0644", source = "target/wasm32-wasip2/release/clawmaster_wasm_calc.wasm" },
  { dest = "/usr/share/clawmaster/wasm/", mode = "0644", source = "target/wasm32-wasip2/release/clawmaster_wasm_web_fetch.wasm" },
  { dest = "/usr/share/clawmaster/wasm/", mode = "0644", source = "target/wasm32-wasip2/release/clawmaster_wasm_web_search.wasm" },
  { dest = "/usr/share/clawmaster/web/", mode = "0644", source = "crates/web/src/assets/**/*" },
]
license = "MIT"
name = "clawmaster"
summary = "Personal AI gateway inspired by OpenClaw"
url = "https://www.clawmaster.org/"

[[bin]]
name = "clawmaster"
path = "src/main.rs"

[dependencies]
anyhow                 = { workspace = true }
clap                   = { workspace = true }
dotenvy                = { workspace = true }
clawmaster-agents          = { workspace = true }
clawmaster-browser         = { workspace = true }
clawmaster-common          = { workspace = true }
clawmaster-config          = { workspace = true }
clawmaster-cron            = { workspace = true }
clawmaster-gateway         = { workspace = true }
clawmaster-memory          = { workspace = true }
clawmaster-node-host       = { workspace = true }
clawmaster-oauth           = { workspace = true }
clawmaster-onboarding      = { workspace = true }
clawmaster-openclaw-import = { optional = true, workspace = true }
clawmaster-plugins         = { workspace = true }
clawmaster-projects        = { workspace = true }
clawmaster-sessions        = { workspace = true }
clawmaster-skills          = { workspace = true }
clawmaster-tools           = { workspace = true }
clawmaster-web             = { optional = true, workspace = true }
open                   = { workspace = true }
rand                   = { workspace = true }
reqwest                = { workspace = true }
secrecy                = { workspace = true }
serde_json             = { workspace = true }
tokio-tungstenite      = { workspace = true }
futures                = { workspace = true }
native-tls             = { workspace = true }
sqlx                   = { workspace = true }
time                   = { workspace = true }
tokio                  = { workspace = true }
tracing                = { workspace = true }
tracing-subscriber     = { workspace = true }
uuid                   = { workspace = true }
which                  = { workspace = true }

# jemalloc disabled on Windows, Linux aarch64 (16KiB page kernels), and mobile (iOS/Android)
[target.'cfg(all(not(target_os = "windows"), not(target_os = "ios"), not(target_os = "android"), not(all(target_os = "linux", target_arch = "aarch64"))))'.dependencies]
tikv-jemallocator = { optional = true, workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
agent = ["clawmaster-gateway/agent", "clawmaster-web?/agent"]
caldav = ["clawmaster-gateway/caldav"]
default = [
  "agent",
  "caldav",
  "code-splitter",
  "file-watcher",
  "graphql",
  "jemalloc",
  "local-llm",
  "local-llm-metal",
  "mdns",
  "metrics",
  "openclaw-import",
  "prometheus",
  "push-notifications",
  "qmd",
  "slack",
  "tailscale",
  "tls",
  "trusted-network",
  "vault",
  "voice",
  "web-ui",
  "whatsapp",
]
# Minimal build for memory-constrained devices (Raspberry Pi, etc.).
# Build with: cargo build --release --no-default-features --features lightweight
code-splitter   = ["clawmaster-memory/code-splitter"]
embedded-assets = ["clawmaster-web?/embedded-assets"]
embedded-wasm   = ["clawmaster-tools/embedded-wasm"]
file-watcher    = ["clawmaster-gateway/file-watcher"]
graphql         = ["clawmaster-gateway/graphql", "clawmaster-web?/graphql"]
jemalloc        = ["dep:tikv-jemallocator"]
lang-bash       = ["clawmaster-memory/lang-bash"]
lang-c          = ["clawmaster-memory/lang-c"]
lang-cpp        = ["clawmaster-memory/lang-cpp"]
lang-css        = ["clawmaster-memory/lang-css"]
lang-html       = ["clawmaster-memory/lang-html"]
lang-java       = ["clawmaster-memory/lang-java"]
lang-json       = ["clawmaster-memory/lang-json"]
lang-markdown   = ["clawmaster-memory/lang-markdown"]
lang-ruby       = ["clawmaster-memory/lang-ruby"]
lang-toml       = ["clawmaster-memory/lang-toml"]
lang-typescript = ["clawmaster-memory/lang-typescript"]
# jemalloc is intentionally unavailable on linux/aarch64 to avoid runtime
# crashes on 16 KiB page kernels (e.g. Raspberry Pi OS variants).
lightweight        = ["jemalloc", "tls", "web-ui"]
local-llm          = ["clawmaster-gateway/local-llm"]
local-llm-cuda     = ["local-llm", "clawmaster-gateway/local-llm-cuda"]
local-llm-metal    = ["local-llm", "clawmaster-gateway/local-llm-metal"]
mdns               = ["clawmaster-gateway/mdns"]
metrics            = ["clawmaster-gateway/metrics", "clawmaster-web?/metrics"]
openclaw-import    = ["dep:clawmaster-openclaw-import", "clawmaster-gateway/openclaw-import"]
prometheus         = ["clawmaster-gateway/prometheus"]
push-notifications = ["clawmaster-gateway/push-notifications", "clawmaster-web?/push-notifications"]
qmd                = ["clawmaster-gateway/qmd"]
slack              = ["clawmaster-gateway/slack"]
tailscale          = ["clawmaster-gateway/tailscale", "clawmaster-web?/tailscale"]
tls                = ["clawmaster-gateway/tls"]
trusted-network    = ["clawmaster-gateway/trusted-network"]
vault              = ["clawmaster-gateway/vault", "clawmaster-web?/vault"]
voice              = ["clawmaster-gateway/voice", "clawmaster-web?/voice"]
wasm               = ["clawmaster-tools/wasm"]
web-ui             = ["dep:clawmaster-web", "clawmaster-gateway/web-ui"]
whatsapp           = ["clawmaster-gateway/whatsapp"]

[lints]
workspace = true
