[package]
edition.workspace = true
name              = "clawmaster-common"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
futures        = { workspace = true }
clawmaster-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:clawmaster-metrics"]

[lints]
workspace = true
