[package]
name = "clawmaster-config-validator"
version = "0.10.18"
edition = "2021"
authors = ["ClawMaster Team"]
description = "Configuration validation and security checks - DO-178C Level A compliant"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Configuration
clawmaster-config = { path = "../config" }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
