[package]
edition.workspace = true
name              = "clawmaster-config"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
chrono-tz      = { workspace = true }
directories    = { workspace = true }
ipnet          = { workspace = true }
clawmaster-metrics = { optional = true, workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_yaml     = { workspace = true }
thiserror      = { workspace = true }
toml           = { workspace = true }
toml_edit      = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:clawmaster-metrics"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
