[package]
name = "clawmaster-cosmic-client"
version = "0.1.0"
edition = "2021"
description = "RPC client for ClawMaster libcosmic UI"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
url = { workspace = true }
thiserror = { workspace = true }
dirs = "5.0"
toml = "0.8"
tokio-tungstenite = "0.21"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
