[package]
edition.workspace = true
name              = "clawmaster-cron"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
chrono         = { workspace = true }
chrono-tz      = { workspace = true }
cron           = { workspace = true }
clawmaster-agents  = { workspace = true }
clawmaster-common  = { workspace = true }
clawmaster-config  = { workspace = true }
clawmaster-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:clawmaster-metrics"]

[dev-dependencies]
rstest   = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
