[package]
name = "clawmaster-data-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
# CSV parsing
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# XML parsing
quick-xml = { version = "0.31", features = ["serialize"] }

# YAML parsing
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
