[package]
edition.workspace = true
name              = "clawmaster-discord"
version.workspace = true

[dependencies]
anyhow          = { workspace = true }
async-trait     = { workspace = true }
base64          = { workspace = true }
clawmaster-channels = { workspace = true }
clawmaster-common   = { workspace = true }
clawmaster-media    = { workspace = true }
clawmaster-metrics  = { optional = true, workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
serenity        = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }

[features]
metrics = ["dep:clawmaster-metrics"]

[lints]
workspace = true

[dev-dependencies]
image = { workspace = true }
