[package]
name = "clawmaster-fault-recovery"
version = "0.10.18"
edition = "2021"
authors = ["ClawMaster Team"]
description = "Fault detection and auto-recovery - DO-178C Level A compliant"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Synchronization
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
